# llm-council

./: .dockerignore  .env.example  .gitignore  BUILD_SPEC.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO-cochair-continuation.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  smoke.yaml  test.yaml
config/prompts/: chairman.md  proposer.md  ranker.md  triage.md
evals/: deepeval_suite.py  promptfooconfig.yaml
evals/datasets/: high_stakes.json  verifiable.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/amplify/: backend.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: CouncilResult.test.tsx  CouncilResult.tsx  Typewriter.test.tsx  Typewriter.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py
src/ai_council/: __init__.py  settings.py
src/ai_council/api/: app.py  auth.py  routes.py  schemas.py
src/ai_council/cache/: __init__.py  redis_cache.py
src/ai_council/council/: __init__.py  chairman.py  debate.py  orchestrator.py  proposers.py  ranking.py  voting.py
src/ai_council/evals/: __init__.py  harness.py  run.py
src/ai_council/gateway/: __init__.py  client.py  models.py
src/ai_council/guardrails/: __init__.py  safety.py  verify.py
src/ai_council/observability/: __init__.py  adapters.py  metrics.py  tracing.py
src/ai_council/persistence/: __init__.py  db.py  models.py  repository.py
src/ai_council/router/: __init__.py  policy.py  triage.py
src/ai_council/telemetry/: logging.py
tests/load/: locustfile.py
tests/unit/: test_cache.py  test_chairman.py  test_chat_route.py  test_debate.py  test_evals.py  test_gateway.py  test_guardrails.py  test_health.py  test_observability.py  test_orchestrator.py  test_persistence.py  test_proposers.py  test_ranking.py  test_router.py  test_security.py  test_voting.py
